facet-args/tests/snapshots/err__error_missing_value_for_argument_short_missed.snap
---
source: tests/err.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
  × Could not parse CLI arguments
   ╭────
 1 │ -j -v 
   ·    ─┬
   ·     ╰── reflection error: Operation failed on shape usize: Failed to parse string value
   ╰────
